--- a/Exercice4/index.html
+++ b/Exercice4/index.html
@@ -7,12 +7,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-    </script>
     <title>Exercice4</title>
 </head>
 
@@ -25,28 +19,28 @@
                     l'agrandir.
                 </p>
                 <div>
-                    <img src="img/cabourg.jpg" alt="image drapeau" title="drapeau" id="imgCabourg" width="300" height="300">
+                    <img src="img/cabourg.jpg" alt="image drapeau" title="drapeau" id="cabourg" width="300" height="300">
                 </div>
             </div>
         </div>
     </div>
 
     <script>
-        let idCabourg = document.getElementById("imgCabourg");
+        let idCabourg = document.getElementById("cabourg");
 
         idCabourg.addEventListener("click", changeImg);
         idCabourg.addEventListener("mouseover", zoomImg);
         idCabourg.addEventListener("mouseout", zoomOutImg);
 
         function zoomImg() {
-            idCabourg.style.width = "300";
-            idCabourg.style.height = "300";
+            idCabourg.style.width = "50em";
+            idCabourg.style.height = "50em";
 
         }
 
         function zoomOutImg() {
-            idCabourg.style.width = "";
-            idCabourg.style.height = "";
+            idCabourg.style.width = '';
+            idCabourg.style.height = '';
         }
 
         function changeImg() {
@@ -56,6 +50,12 @@
                 idCabourg.src = "img/cabourg.jpg";
             }
         }
+    </script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
     </script>
 </body>
 
